Refactor to put individuals as menu leaves
Each individual now gets their own menu entry, and species is now an
interim menu item.

--- a/species/12676.md
+++ b/species/12676.md
@@ -1,7 +1,9 @@
 ---
 layout: species
 genus: "Euclystis"
-title: "Euclystis guerini Guenee"
+ID: "12676"
+species: "Euclystis guerini Guenee"
+title: "Euclystis guerini Guenee - 12676"
 categories: jekyll species
 ---
 
